﻿v2.1.0

- New Analyzer: PH_P010 - Async Instead of Continuation


------------------

v2.0.0

- Dropped VS2017 support
- Upgraded the .NET Compiler Platform to 3.0.0 to support C# 8.0 features
- New Analyzer: PH_P009 - Synchronous Dispose in Async Method
- New Analyzer: PH_B012 - Multiple Awaits on the Same ValueTask
- Improved Analyzer: PH_B011 - Added support for using declarations
- Now respecting local functions as guards for activation frames
- Set the default severity of PH_P004 to hidden since PH_P007 covers the issue


------------------
v1.8.3

Initial public release.